# OpenGLPong

./: CMakeLists.txt  config.ini  readme.md
fields/: boring.pong  childish.pong  football.pong
shaders/: main.fs.glsl  main.vs.glsl  ui.fs.glsl
src/: Ball.cpp  Ball.h  Entity.hpp  EventsHandler.cpp  EventsHandler.h  Field.cpp  Field.h  InterfaceHandler.hpp  Paddle.cpp  Paddle.h  PaddleFactory.hpp  Shader.cpp  Shader.h  SoundHandler.hpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Utils.cpp  Utils.hpp  Window.cpp  Window.h  main.cpp
vendors/include/: inipp.h  stb_image.h
vendors/include/GLFW/: glfw3.h
vendors/include/glm/: CMakeLists.txt
vendors/lib/freetype/: freetype2.pc
